--- a/arch/arm64/boot/dts/qcom/sdmmagpie.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdmmagpie.dtsi
@@ -60,7 +60,8 @@
 			compatible = "arm,armv8";
 			reg = <0x0 0x0>;
 			enable-method = "psci";
-			capacity-dmips-mhz = <487>;
+			capacity-dmips-mhz = <486>;
+			freq-energy-model;
 			sched-energy-costs = <&CPU_COST_0 &CLUSTER_COST_0>;
 			next-level-cache = <&L2_0>;
 			qcom,lmh-dcvs = <&lmh_dcvs0>;
@@ -96,7 +97,8 @@
 			compatible = "arm,armv8";
 			reg = <0x0 0x100>;
 			enable-method = "psci";
-			capacity-dmips-mhz = <487>;
+			capacity-dmips-mhz = <486>;
+			freq-energy-model;
 			sched-energy-costs = <&CPU_COST_0 &CLUSTER_COST_0>;
 			next-level-cache = <&L2_100>;
 			qcom,lmh-dcvs = <&lmh_dcvs0>;
@@ -128,7 +130,8 @@
 			compatible = "arm,armv8";
 			reg = <0x0 0x200>;
 			enable-method = "psci";
-			capacity-dmips-mhz = <487>;
+			capacity-dmips-mhz = <486>;
+			freq-energy-model;
 			sched-energy-costs = <&CPU_COST_0 &CLUSTER_COST_0>;
 			next-level-cache = <&L2_200>;
 			qcom,lmh-dcvs = <&lmh_dcvs0>;
@@ -159,7 +162,8 @@
 			compatible = "arm,armv8";
 			reg = <0x0 0x300>;
 			enable-method = "psci";
-			capacity-dmips-mhz = <487>;
+			capacity-dmips-mhz = <486>;
+			freq-energy-model;
 			sched-energy-costs = <&CPU_COST_0 &CLUSTER_COST_0>;
 			next-level-cache = <&L2_300>;
 			qcom,lmh-dcvs = <&lmh_dcvs0>;
@@ -190,7 +194,8 @@
 			compatible = "arm,armv8";
 			reg = <0x0 0x400>;
 			enable-method = "psci";
-			capacity-dmips-mhz = <487>;
+			capacity-dmips-mhz = <486>;
+			freq-energy-model;
 			sched-energy-costs = <&CPU_COST_0 &CLUSTER_COST_0>;
 			next-level-cache = <&L2_400>;
 			qcom,lmh-dcvs = <&lmh_dcvs0>;
@@ -221,7 +226,8 @@
 			compatible = "arm,armv8";
 			reg = <0x0 0x500>;
 			enable-method = "psci";
-			capacity-dmips-mhz = <487>;
+			capacity-dmips-mhz = <486>;
+			freq-energy-model;
 			sched-energy-costs = <&CPU_COST_0 &CLUSTER_COST_0>;
 			next-level-cache = <&L2_500>;
 			qcom,lmh-dcvs = <&lmh_dcvs0>;
@@ -253,6 +259,7 @@
 			reg = <0x0 0x600>;
 			enable-method = "psci";
 			capacity-dmips-mhz = <1024>;
+			freq-energy-model;
 			sched-energy-costs = <&CPU_COST_1 &CLUSTER_COST_1>;
 			next-level-cache = <&L2_600>;
 			qcom,lmh-dcvs = <&lmh_dcvs1>;
@@ -293,6 +300,7 @@
 			reg = <0x0 0x700>;
 			enable-method = "psci";
 			capacity-dmips-mhz = <1024>;
+			freq-energy-model;
 			sched-energy-costs = <&CPU_COST_1 &CLUSTER_COST_1>;
 			next-level-cache = <&L2_700>;
 			qcom,lmh-dcvs = <&lmh_dcvs1>;
@@ -372,10 +380,10 @@
 
 		CPU_COST_0: core-cost0 {
 			busy-cost-data = <
-				280	213
-				317	224
-				362	235
-				382	251
+				1324800	277
+				1497600	288
+				1708800	301
+				1804800	319
 			>;
 			idle-cost-data = <
 				16 12 8 6
@@ -384,12 +392,12 @@
 
 		CPU_COST_1: core-cost1 {
 			busy-cost-data = <
-				435	334
-				537	395
-				588	432
-				691	542
-				819	701
-				1024 1101
+				979200	415
+				1209600	478
+				1324800	517
+				1555200	620
+				1843200	794
+				2304000	1181
 			>;
 			idle-cost-data = <
 				100 80 60 40
@@ -398,10 +406,10 @@
 
 		CLUSTER_COST_0: cluster-cost0 {
 			busy-cost-data = <
-				280	10
-				317	10
-				362	14
-				382	14
+				1324800	10
+				1497600	10
+				1708800	14
+				1804800	14
 			>;
 			idle-cost-data = <
 				5 4 3 2 1
@@ -410,12 +418,12 @@
 
 		CLUSTER_COST_1: cluster-cost1 {
 			busy-cost-data = <
-				435	25
-				537	32
-				588	33
-				691	41
-				819	49
-				1024 62
+				979200	25
+				1209600	32
+				1324800	33
+				1555200	41
+				1843200	49
+				2304000	62
 			>;
 			idle-cost-data = <
 				5 4 3 2 1
